--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <script src="js/index.js"></script>
     <title>Northwest Notary</title>
 </head>
-<body>
+<body class="bg-secondary-subtle">
     <nav class="navbar navbar-expand bg-secondary d-flex gap-2 justify-content-between">
         <a class="navbar-brand p-2 text-bg-secondary" href="#">Northwest Notary</a>
     </nav>
-    <div class="card border-0">
+    <div class="card border-0 bg-secondary-subtle">
         <img class="card-img opacity-25" src="img/pexels-pixabay-356340.jpg" alt="Northwest Notary">
         <div class="card-body border-0">
             <div class="card-img-overlay text-center">
@@ -47,38 +47,39 @@
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
-    <div class="container text-center">
+    <div class="container text-center bg-success-subtle text-success-subtle p-3">
         <div class="row">
             <div class="col">
                 <h4>Services Provided</h4>
                 <ul class="list-group">
-                    <li class="list-group-item">Living wills and trusts</li>
-                    <li class="list-group-item">Power of attorney</li>
-                    <li class="list-group-item">Jurats</li>
-                    <li class="list-group-item">Acknowledgement</li>
-                    <li class="list-group-item">Certified copies</li>
-                    <li class="list-group-item">Other general Notary acts</li>
+                    <li class="list-group-item bg-success text-bg-success">Living wills and trusts</li>
+                    <li class="list-group-item bg-success text-bg-success">Power of attorney</li>
+                    <li class="list-group-item bg-success text-bg-success">Jurats</li>
+                    <li class="list-group-item bg-success text-bg-success">Acknowledgement</li>
+                    <li class="list-group-item bg-success text-bg-success">Certified copies</li>
+                    <li class="list-group-item bg-success text-bg-success">Other general Notary acts</li>
                 </ul>
             </div>
             <div class="col">
                 <h4>Time and Fees</h4>
                 <ul class="list-group">
-                    <li class="list-group-item">All signings, in accordance with Oregon law, are $10 per signing plus travel fee</li>
-                    <li class="list-group-item">For Cottage Grove & Creswell areas, travel fee is $20</li>
-                    <li class="list-group-item">For central Eugene & Springfield areas, travel fee is $35</li>
-                    <li class="list-group-item">Areas outside of those listed above require a quote to calculate travel fee</li>
-                    <li class="list-group-item">Please note: Travel fees are due within 24 hours of appointment date. If same day appointment, travel fee is due immediately.</li>
+                    <li class="list-group-item bg-success text-bg-success">All signings, in accordance with Oregon law, are $10 per signing plus travel fee</li>
+                    <li class="list-group-item bg-success text-bg-success">For Cottage Grove & Creswell areas, travel fee is $20</li>
+                    <li class="list-group-item bg-success text-bg-success">For central Eugene & Springfield areas, travel fee is $35</li>
+                    <li class="list-group-item bg-success text-bg-success">Areas outside of those listed above require a quote to calculate travel fee</li>
+                    <li class="list-group-item bg-success text-bg-success">Please note: Travel fees are due within 24 hours of appointment date. If same day appointment, travel fee is due immediately.</li>
                 </ul>
             </div>
             <div class="col">
                <h4>Miscellaneous Fees</h4>
                 <ul class="list-group">
-                    <li class="list-group-item">Signer refuses to sign - travel fee is still required</li>
-                    <li class="list-group-item">Signer does not have required government ID - travel fee is still required</li>
-                    <li class="list-group-item">Wait times - An additional $10 is charged for every 15 minutes after scheduled appointment time</li>
+                    <li class="list-group-item bg-success text-bg-success">Signer refuses to sign - travel fee is still required</li>
+                    <li class="list-group-item bg-success text-bg-success">Signer does not have required government ID - travel fee is still required</li>
+                    <li class="list-group-item bg-success text-bg-success">Wait times - An additional $10 is charged for every 15 minutes after scheduled appointment time</li>
                 </ul>
             </div>
         </div>
     </div>
+<div class="container-fluid bg-secondary"></div>
 </body>
 </html>
